// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search Bar Should match snapshots  1`] = `
<div>
  <div
    class="w-full pt-5 mb-3 text-trueGray-600"
  >
    <form
      class="flex items-center overflow-hidden border-b rounded-t-lg focus-within:border-lightBlue-400 focus-within:bg-blueGray-700 focus-within:opacity-90 border-blueGray-400 focus-within:border-b-2"
      role="form"
    >
      <label
        for="search-input"
      />
      <input
        aria-label="search-input"
        class="w-full h-12 py-1 pl-3 text-lg disabled:text-trueGray-400 disabled:cursor-not-allowed focus:outline-none bg-blueGray-800 text-blueGray-200 focus:opacity-90 focus:bg-blueGray-700"
        name="search-input"
        placeholder="start searching..."
        type="text"
        value=""
      />
      <div
        class="flex items-center text-trueGray-500 bg-blueGray-800"
      >
        <div
          class="w-1 h-8 border-r"
        />
        <span
          class="grid w-12 h-12 place-items-center"
        >
          <div
            data-testid="cc-container"
          >
            <button
              aria-label="submit"
              class="w-12 h-12 icon-btn focus:bg-blueGray-500 text-blueGray-200"
              disabled=""
              role="button"
              type="submit"
            >
              <svg
                class="mx-auto"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M10.442 10.442a1 1 0 011.415 0l3.85 3.85a1 1 0 01-1.414 1.415l-3.85-3.85a1 1 0 010-1.415z"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M6.5 12a5.5 5.5 0 100-11 5.5 5.5 0 000 11zM13 6.5a6.5 6.5 0 11-13 0 6.5 6.5 0 0113 0z"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
             
          </div>
        </span>
      </div>
    </form>
  </div>
</div>
`;

exports[`Search Bar Should match snapshots  2`] = `
<div>
  <div
    class="w-full pt-5 mb-3 text-trueGray-600"
  >
    <form
      class="flex items-center overflow-hidden border-b rounded-t-lg focus-within:border-lightBlue-400 focus-within:bg-blueGray-700 focus-within:opacity-90 border-blueGray-400 focus-within:border-b-2"
      role="form"
    >
      <label
        for="search-input"
      />
      <input
        aria-label="search-input"
        class="w-full h-12 py-1 pl-3 text-lg disabled:text-trueGray-400 disabled:cursor-not-allowed focus:outline-none bg-blueGray-800 text-blueGray-200 focus:opacity-90 focus:bg-blueGray-700"
        name="search-input"
        placeholder="start searching..."
        type="text"
        value="device"
      />
      <div
        class="flex items-center text-trueGray-500 bg-blueGray-800"
      >
        <div
          data-testid="cc-container"
        >
          <button
            aria-label="delete-button"
            class="w-12 h-12 rounded-none btn focus:bg-blueGray-500 text-blueGray-200"
            type="button"
          >
            <svg
              class="mx-auto"
              fill="currentColor"
              height="20"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </button>
           
        </div>
        <div
          class="w-1 h-8 border-r"
        />
        <span
          class="grid w-12 h-12 place-items-center"
        >
          <div
            data-testid="cc-container"
          >
            <button
              aria-label="submit"
              class="w-12 h-12 icon-btn focus:bg-blueGray-500 text-blueGray-200"
              role="button"
              type="submit"
            >
              <svg
                class="mx-auto"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M10.442 10.442a1 1 0 011.415 0l3.85 3.85a1 1 0 01-1.414 1.415l-3.85-3.85a1 1 0 010-1.415z"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M6.5 12a5.5 5.5 0 100-11 5.5 5.5 0 000 11zM13 6.5a6.5 6.5 0 11-13 0 6.5 6.5 0 0113 0z"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
             
          </div>
        </span>
      </div>
    </form>
  </div>
</div>
`;
